Don't list crashed tabs in the "Hung Page" dialog.

BUG=795296

Change-Id: I7f4667a4a4ec78a3dc605e56b8bb9a1bf92c5a4a
Reviewed-on: https://chromium-review.googlesource.com/857424
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528135}
Former-commit-id: 8bdab7b9c09926abc2921af8c70785e822da4787